--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 	4. Copy only URL and paste it within the src="" field below
 -->
                         <div class="google-map" data-aos="fade-up" data-aos-delay="900">
-                           <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="1920" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                           <iframe src="https://g.co/kgs/QqF7y1s" width="1920" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
                     
